deployments/home-assistant/music-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-assistant-dummy
  namespace: homeassistant
spec:
  type: ClusterIP
  ports:
    - port: 8095
      targetPort: 8095
  selector:
    app: music-assistant
