deployments/home-assistant/music-assistant/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: music-assistant-ingress
  namespace: homeassistant
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`music.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: music-assistant-dummy
          port: 8095
  tls:
    secretName: local-tigovanroy-space-production-tls
